# Matam-Assignment4

./: Area.cpp  Area.h  Area_test.cpp  CMakeLists.txt  Clan.cpp  Clan.h  Clan_test.cpp  Group.cpp  Group.h  Group_test.cpp  Mountain.cpp  Mountain.h  Mountain_test.cpp  MtmSet.h  MtmSet_test.cpp  Plain.cpp  Plain.h  Plain_test.cpp  River.cpp  River.h  River_test.cpp  World.cpp  World.h  World_test.cpp  examplePart1.cpp  examplePart2.cpp  examplePart3.cpp  exceptions.h  main.cpp  testMacros.h
beard_tests/: AreaTest.cpp  ClanTest.cpp  GroupTest.cpp  MtmSetTest.cpp  WorldTest.cpp
examples/: examplePart1.cpp  examplePart2.cpp  examplePart3.cpp
farfara_tests/: Area_test.cpp  Clan_test.cpp  Group_test.cpp  World_test.cpp  set_test.cpp
test/: Area_test.cpp  Clan_test.cpp  Group_test.cpp  Mountain_test.cpp  MtmSet_test.cpp  Plain_test.cpp  River_test.cpp  World_test.cpp
